name:                tmp-postgres
version:             1.27.0.2
synopsis: Start and stop a temporary postgres
description: Start and stop a temporary postgres. See README.md
homepage:            https://github.com/jfischoff/tmp-postgres#readme
license:             BSD3
license-file:        LICENSE
author:              Jonathan Fischoff
maintainer:          jonathangfischoff@gmail.com
copyright:           2017-2019 Jonathan Fischoff
category:            Web
build-type:          Simple
extra-source-files:  README.md, CHANGELOG.md
cabal-version:       >=1.10
tested-with: GHC ==8.6.5

library
  hs-source-dirs: src
  exposed-modules: Database.Postgres.Temp
                 , Database.Postgres.Temp.Internal
                 , Database.Postgres.Temp.Internal.Core
                 , Database.Postgres.Temp.Internal.Config
  default-extensions:
      ApplicativeDo
    , BlockArguments
    , CPP
    , DeriveAnyClass
    , DeriveFunctor
    , DeriveGeneric
    , DerivingStrategies
    , DerivingVia
    , GeneralizedNewtypeDeriving
    , LambdaCase
    , OverloadedStrings
    , RankNTypes
    , RecordWildCards
    , ScopedTypeVariables
    , TemplateHaskell
    , TupleSections
    , ViewPatterns
  build-depends: base >= 4.6 && < 5
               , base64-bytestring
               , ansi-wl-pprint
               , async
               , bytestring
               , containers
               , cryptohash-sha1
               , deepseq
               , directory
               , generic-monoid
               , port-utils
               , postgres-options >= 0.2.0.0
               , postgresql-simple
               , process >= 1.2.0.0
               , stm
               , temporary
               , transformers
               , unix
  ghc-options: -Wall
  default-language:    Haskell2010


test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , containers
                     , directory
                     , generic-monoid
                     , hspec
                     , mtl
                     , network
                     , port-utils
                     , postgres-options
                     , postgresql-simple
                     , process
                     , temporary
                     , tmp-postgres
                     , unix

  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:
      BlockArguments
    , DeriveDataTypeable
    , DeriveGeneric
    , DerivingStrategies
    , DerivingVia
    , LambdaCase
    , OverloadedStrings
    , QuasiQuotes
    , RankNTypes
    , RecordWildCards
    , ScopedTypeVariables

benchmark benchmark
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: benchmark
  default-language: Haskell2010
  ghc-options: -O2 -Wall
  build-depends: base
    , criterion
    , deepseq
    , postgres-options
    , postgresql-simple
    , tmp-postgres
  default-extensions:
      ApplicativeDo
    , DeriveFunctor
    , DeriveGeneric
    , DerivingStrategies
    , DerivingVia
    , GeneralizedNewtypeDeriving
    , LambdaCase
    , OverloadedStrings
    , RankNTypes
    , RecordWildCards
    , ScopedTypeVariables
    , TemplateHaskell
    , TupleSections
    , ViewPatterns

source-repository head
  type:     git
  location: https://github.com/jfischoff/tmp-postgres

executable soak-test
  main-is: Main.hs
  hs-source-dirs: resource-soak-test
  default-language: Haskell2010
  ghc-options: -O2 -Wall
  build-depends: base
    , async
    , directory
    , postgres-options
    , postgresql-simple
    , process
    , temporary
    , tmp-postgres
  default-extensions:
      ApplicativeDo
    , DeriveFunctor
    , DeriveGeneric
    , DerivingStrategies
    , DerivingVia
    , GeneralizedNewtypeDeriving
    , LambdaCase
    , OverloadedStrings
    , RankNTypes
    , RecordWildCards
    , ScopedTypeVariables
    , TemplateHaskell
    , TupleSections
    , ViewPatterns

source-repository head
  type:     git
  location: https://github.com/jfischoff/tmp-postgres
